--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,8 +1,9 @@
 {
-  "type":"module",
+  "type": "module",
   "dependencies": {
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
   }
